--- a/_data/course.yml
+++ b/_data/course.yml
@@ -1,5 +1,5 @@
-title: Course in a box
-description: Build Your Very Own Open Course
+title: Cursos para armar
+description: Cómo construir tu propio Curso Abierto
 modules: [start, community, learning, content, feedback, references]
 signups:
  - name: Dirk Uys
